# rust-s3

aws-creds/: Cargo.toml
s3/: Cargo.toml
s3/src/: bucket.rs
