[package]
name = "rust-s3"
version = "0.32.3"
authors = ["Drazen Urch"]
description = "Rust library for working with Amazon S3 and compatible object storage APIs"
repository = "https://github.com/durch/rust-s3"
readme = "README.md"
keywords = ["S3", "Wasabi", "Minio", "Yandex", "GCP"]
license = "MIT"
documentation = "https://durch.github.io/rust-s3/s3/"
edition = "2018"

[lib]
name = "s3"
path = "src/lib.rs"

# [[bin]]
# name = "simple_crud"
# path = "bin/simple_crud.rs"

[dependencies]
async-std = { version = "1", optional = true }
async-trait = "0.1"
attohttpc = { version = "0.19", optional = true, default-features = false }
aws-creds = { path = "../aws-creds", default-features = false }
aws-region = {path = "../aws-region"}
base64 = "0.13"
cfg-if = "1"
time = { version = "^0.3.6", features = ["formatting", "macros"] }
futures-io = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true, features = ["io"] }
hex = "0.4"
hmac = "0.12"
http = "0.2"
log = "0.4"
maybe-async = { version = "0.2" }
md5 = "0.7"
percent-encoding = "2"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
], optional = true }
serde = "1"
serde_derive = "1"
serde-xml-rs = "0.5"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = [
    "io-util",
], optional = true, default-features = false }
tokio-stream = { version = "0.1", optional = true }
url = "2"
minidom = { version = "0.15", optional = true }

block_on_proc = { version = "0.2", optional = true }

[features]
with-tokio = ["reqwest", "tokio", "tokio/fs", "tokio-stream"]
default = ["tokio-rustls-tls", "tags", "fail-on-err"]
no-verify-ssl = []
fail-on-err = []
tokio-rustls-tls = ["with-tokio", "reqwest/rustls-tls", "aws-creds/rustls-tls"]
tags = ["minidom"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
async-std = { version = "1", features = ["attributes"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.9"
aws-creds = { path = "../aws-creds", features = ["http-credentials"] }
anyhow = "1"
